--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-"name": "avaliacoes-backend",
-"version": "1.0.0",
-"description": "API para Portal de Avaliações — Node + Express + SQLite",
-"main": "server.js",
-"scripts": {
-"start": "node server.js",
-"dev": "nodemon server.js",
-"migrate": "node -e \"require('./db').migrate()\""
-},
-"dependencies": {
-"better-sqlite3": "^8.4.0",
-"express": "^4.18.2",
-"helmet": "^6.0.1",
-"cors": "^2.8.5",
-"body-parser": "^1.20.2"
-},
-"devDependencies": {
-"nodemon": "^3.0.1"
-}
+  "name": "feedback-risada",
+  "version": "1.0.0",
+  "description": "",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
